fix: Not Found component with 404 image and navigation button

--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,10 @@
-<p>not-found works!</p>
+<div class="text-white bg-white">
+    <section class="vh-100 d-flex justify-content-center align-items-center">
+        <div class="text-center">
+            <div class="myStar mb-2 m-auto">
+                <img src="/images/ERROR404.png" alt="robot-error404" class="container" style="width: 600px; height: 500px;">
+            </div>
+            <button routerLink="/home" class="VBtns text-white">Take me to Home</button>
+        </div>
+    </section>
+</div>
