fix: NotFoundComponent and Correct portfolio title typo, update HomeComponent layout , and configure Vercel fallback with vercel.json

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="p-85 myPad" style="background-color: var(--main-color);">
+<div class="vh-100 myPad" style="background-color: var(--main-color);">
     <div class="container d-flex justify-content-center align-items-center text-center">
         <img class="pt-70 m-5" style="width: 220px;" src="\images\avataaars.svg" alt="Boy">
     </div>
