--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,10 +1,9 @@
-<div class="text-white bg-white">
-    <section class="vh-100 d-flex justify-content-center align-items-center">
-        <div class="text-center">
-            <div class="myStar mb-2 m-auto">
-                <img src="/images/ERROR404.png" alt="robot-error404" class="container" style="width: 600px; height: 500px;">
-            </div>
-            <button routerLink="/home" class="VBtns text-white">Take me to Home</button>
+<div class="bg-white vh-100 d-flex justify-content-center align-items-center">
+    <div class="text-center">
+        <div class="mb-4">
+            <img src="/images/ERROR404.png" alt="robot-error404" class="img-fluid"
+                style="max-width: 100%; height: auto; width: 600px;">
         </div>
-    </section>
+        <button routerLink="/home" class="VBtns text-white">Take me to Home</button>
+    </div>
 </div>
